reportes funcionando sin el exel

--- a/src/main/webapp/WEB-INF/reports/comites/rpt_comites.jrxml
+++ b/src/main/webapp/WEB-INF/reports/comites/rpt_comites.jrxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="null" pageWidth="842" pageHeight="595" orientation="Landscape" columnWidth="802" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="278e8c75-ccfd-47d2-98c9-f643bb2526f5">
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="null" pageWidth="842" pageHeight="595" orientation="Landscape" columnWidth="802" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="c79f703b-bf01-4865-bd2b-701eb356ba3a">
 	<property name="ireport.zoom" value="1.0"/>
-	<property name="ireport.x" value="74"/>
-	<property name="ireport.y" value="65"/>
+	<property name="ireport.x" value="199"/>
+	<property name="ireport.y" value="66"/>
 	<parameter name="CODIGO" class="java.lang.String">
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
 	</parameter>
@@ -12,11 +12,15 @@
 	<parameter name="FECHAFIN" class="java.lang.String">
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
 	</parameter>
+	<parameter name="IMAGE_PATH" class="java.lang.String">
+		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
+	</parameter>
 	<queryString>
 		<![CDATA[select COUNT(c.codigocomite), e.nombreempleado,p.nombrepuesto,c.numeroacuerdocomite,c.nombrecomite,c.fechadesdecomite,c.fechahastacomite from empleado e 
-	 inner join empleadopuesto ep ON ep.codigoempleado=ep.codigoempleado inner join puesto p on ep.codigopuesto=p.codigopuesto INNER join comite c on e.codigoempleado=c.codigoempleado
+ inner join empleadopuesto ep ON ep.codigoempleado=ep.codigoempleado inner join puesto p on ep.codigopuesto=p.codigopuesto INNER join comite c on e.codigoempleado=c.codigoempleado
 WHERE c.codigocomite=$P{CODIGO}
-and c.fechadesdecomite>=$P{FECHAINICIO} and c.fechahastacomite<=$P{FECHAFIN}]]>
+and c.fechadesdecomite>=$P{FECHAINICIO}
+and c.fechahastacomite<=$P{FECHAFIN}]]>
 	</queryString>
 	<field name="COUNT(c.codigocomite)" class="java.lang.Long"/>
 	<field name="nombreempleado" class="java.lang.String">
@@ -41,154 +45,225 @@ and c.fechadesdecomite>=$P{FECHAINICIO} and c.fechahastacomite<=$P{FECHAFIN}]]>
 		<band splitType="Stretch"/>
 	</background>
 	<title>
-		<band height="107" splitType="Stretch">
+		<band height="79" splitType="Stretch">
 			<staticText>
-				<reportElement x="370" y="59" width="64" height="20" uuid="304b82b3-aab1-463e-9694-33abfc7fe7e5"/>
+				<reportElement x="338" y="37" width="126" height="20" uuid="ff276982-a8e2-4630-862b-199b523e2b30"/>
 				<textElement>
-					<font fontName="Times New Roman" size="12"/>
-				</textElement>
-				<text><![CDATA[SISADMRH]]></text>
-			</staticText>
-			<image>
-				<reportElement x="10" y="15" width="178" height="70" uuid="348ab64e-cce5-4951-a403-86fa0bc5bf66"/>
-				<imageExpression><![CDATA[$P{IMAGE_PATH}.concat("GOES.jpg")]]></imageExpression>
-			</image>
-			<image>
-				<reportElement x="615" y="10" width="178" height="75" uuid="347547f0-dc3f-41d4-8948-1f14704edd30"/>
-				<imageExpression><![CDATA[$P{IMAGE_PATH}.concat("LOGOMJ.jpg")]]></imageExpression>
-			</image>
-			<staticText>
-				<reportElement x="317" y="38" width="173" height="20" uuid="f438b45c-f9d7-41fa-a5f4-7f206290bb55"/>
-				<textElement>
-					<font fontName="Times New Roman" size="12"/>
+					<font fontName="SansSerif"/>
 				</textElement>
 				<text><![CDATA[Direccion de Recursos Humanos]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="316" y="15" width="173" height="20" uuid="40f82697-c982-4904-b58a-e10862ebb42f"/>
+				<reportElement x="296" y="22" width="211" height="20" uuid="18a5c2ea-07e8-4059-bb1d-26a112f366be"/>
 				<textElement>
-					<font fontName="Times New Roman" size="12"/>
+					<font fontName="SansSerif"/>
 				</textElement>
-				<text><![CDATA[Ministrio de Justicia y Segruridad Publica]]></text>
+				<text><![CDATA[Ministerio de Justicia  y Segurdiad Pública]]></text>
 			</staticText>
+			<staticText>
+				<reportElement x="354" y="54" width="66" height="20" uuid="7048bb48-5bd3-4523-954e-6d75beaee769"/>
+				<textElement>
+					<font fontName="SansSerif"/>
+				</textElement>
+				<text><![CDATA[SISASMRH]]></text>
+			</staticText>
+			<image>
+				<reportElement x="29" y="22" width="212" height="38" uuid="d5244a04-208d-4ef9-bc04-8c758f3c1f28"/>
+				<imageExpression><![CDATA[$P{IMAGE_PATH}.concat("/GOES.jpg")]]></imageExpression>
+			</image>
+			<image>
+				<reportElement x="601" y="22" width="167" height="52" uuid="757880b3-ddc9-4fcd-9ec0-2b4cae2e48bb"/>
+				<imageExpression><![CDATA[$P{IMAGE_PATH}.concat("/LOGOMJ.jpg")]]></imageExpression>
+			</image>
 		</band>
 	</title>
 	<pageHeader>
-		<band height="63" splitType="Stretch">
+		<band height="46" splitType="Stretch">
 			<staticText>
-				<reportElement x="346" y="3" width="100" height="20" uuid="d6efa5c7-dbba-405d-9829-27a7a3f4b04f"/>
-				<text><![CDATA[Reporte de Comites]]></text>
-			</staticText>
-			<staticText>
-				<reportElement x="253" y="24" width="46" height="20" uuid="59f70a37-5027-4516-8e7a-f732b225dc77"/>
-				<text><![CDATA[Desde]]></text>
-			</staticText>
-			<staticText>
-				<reportElement x="493" y="28" width="42" height="20" uuid="5085c6dc-8c3e-4489-9bb7-877db29d3a9e"/>
-				<text><![CDATA[Hasta]]></text>
+				<reportElement x="336" y="2" width="130" height="20" uuid="d2820ed1-563c-4556-97e7-7f9324cc9b90"/>
+				<textElement>
+					<font fontName="SansSerif"/>
+				</textElement>
+				<text><![CDATA[Reporte de Comites ]]></text>
 			</staticText>
 			<textField pattern="dd/MM/yyyy">
-				<reportElement x="700" y="7" width="100" height="20" uuid="a2546718-5c9f-4522-9773-582d0a4e0037"/>
+				<reportElement x="710" y="3" width="100" height="20" uuid="04e4df16-4b67-4340-8a24-945fe1331771"/>
+				<textElement>
+					<font fontName="SansSerif"/>
+				</textElement>
 				<textFieldExpression><![CDATA[new java.util.Date()]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="672" y="36" width="80" height="20" uuid="bcbc0d91-374e-411c-80c4-b35b6cb1ce67"/>
-				<textElement textAlignment="Right"/>
+				<reportElement x="681" y="21" width="80" height="20" uuid="c42b5a94-d56f-415b-9967-63beca281b2d"/>
+				<textElement textAlignment="Right">
+					<font fontName="SansSerif"/>
+				</textElement>
 				<textFieldExpression><![CDATA["Pagina "+$V{PAGE_NUMBER}+" de"]]></textFieldExpression>
 			</textField>
 			<textField evaluationTime="Report">
-				<reportElement x="752" y="36" width="40" height="20" uuid="3f516f8d-0af4-4aa0-9522-139cc9b5b20e"/>
+				<reportElement x="761" y="21" width="40" height="20" uuid="0079daa6-1363-4574-a3cf-8cb78dec494e"/>
+				<textElement>
+					<font fontName="SansSerif"/>
+				</textElement>
 				<textFieldExpression><![CDATA[" " + $V{PAGE_NUMBER}]]></textFieldExpression>
 			</textField>
+			<staticText>
+				<reportElement x="214" y="21" width="38" height="20" uuid="46e35f03-e614-451b-9ee7-b3d1e73cdf93"/>
+				<textElement>
+					<font fontName="SansSerif"/>
+				</textElement>
+				<text><![CDATA[Desde]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="481" y="21" width="39" height="20" uuid="3e1a0d6d-d4bc-49c7-be68-31d48017ee8f"/>
+				<textElement>
+					<font fontName="SansSerif"/>
+				</textElement>
+				<text><![CDATA[Hasta]]></text>
+			</staticText>
 			<textField>
-				<reportElement x="315" y="26" width="100" height="20" uuid="af5360d6-9a38-45c5-a78b-2724d1f35082"/>
-				<textFieldExpression><![CDATA[$F{fechadesdecomite}]]></textFieldExpression>
+				<reportElement x="264" y="21" width="100" height="20" uuid="fe98f365-d451-4cbf-8c21-ba4984bac98e"/>
+				<textElement>
+					<font fontName="SansSerif"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$P{FECHAINICIO}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="550" y="28" width="100" height="20" uuid="2152763f-62ad-409a-9d65-ba9efc2967ba"/>
-				<textFieldExpression><![CDATA[$F{fechahastacomite}]]></textFieldExpression>
+				<reportElement x="532" y="21" width="100" height="20" uuid="689ef65a-c28c-4309-a567-86b3627c4c96"/>
+				<textElement>
+					<font fontName="SansSerif"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$P{FECHAFIN}]]></textFieldExpression>
 			</textField>
 		</band>
 	</pageHeader>
 	<columnHeader>
-		<band height="35" splitType="Stretch">
+		<band height="54" splitType="Stretch">
 			<staticText>
-				<reportElement x="10" y="0" width="100" height="20" uuid="98c6f5fe-2226-4066-bb55-e2a3898f0904"/>
+				<reportElement x="14" y="34" width="100" height="20" uuid="e3dcf82b-5ff6-4cd8-beed-a789d18846ba"/>
+				<textElement>
+					<font fontName="SansSerif" size="12" isBold="false"/>
+				</textElement>
 				<text><![CDATA[Empleado]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="150" y="2" width="100" height="20" uuid="a7908f29-3b12-40b2-b81d-b15335932120"/>
+				<reportElement x="141" y="34" width="100" height="20" uuid="82b4c1ff-82b5-41e6-9f4d-416a004632e9"/>
+				<textElement>
+					<font fontName="SansSerif" size="12" isBold="false"/>
+				</textElement>
 				<text><![CDATA[Puesto]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="269" y="2" width="100" height="20" uuid="158afa62-29e4-4b9b-a0f7-2042fd47375d"/>
+				<reportElement x="271" y="34" width="100" height="20" uuid="3013f3b1-0485-44c2-8e02-c1b28b9f452f"/>
+				<textElement>
+					<font fontName="SansSerif" size="12" isBold="false"/>
+				</textElement>
 				<text><![CDATA[Acuerdo]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="404" y="2" width="100" height="20" uuid="8087ad07-a921-406c-8d0f-77899f83f4b0"/>
-				<text><![CDATA[Comite]]></text>
-			</staticText>
-			<staticText>
-				<reportElement x="533" y="2" width="100" height="20" uuid="a2940d79-46ae-47ce-af86-6f85c8d61311"/>
+				<reportElement x="551" y="34" width="100" height="20" uuid="ff22621e-182f-4480-9973-78ff7fa9e390"/>
+				<textElement>
+					<font fontName="SansSerif" size="12" isBold="false"/>
+				</textElement>
 				<text><![CDATA[Desde]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="658" y="2" width="100" height="20" uuid="ecd6e0fa-1dcf-4520-9b63-6ab569846692"/>
+				<reportElement x="694" y="34" width="100" height="20" uuid="970e7ca7-832f-4f96-a6b9-963f678a40b6"/>
+				<textElement>
+					<font fontName="SansSerif" size="12" isBold="false"/>
+				</textElement>
 				<text><![CDATA[Hasta]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="407" y="34" width="100" height="20" uuid="b0c4178c-b9e5-44a9-a803-d86696058694"/>
+				<textElement>
+					<font fontName="SansSerif" size="12" isBold="false"/>
+				</textElement>
+				<text><![CDATA[Comite]]></text>
 			</staticText>
 		</band>
 	</columnHeader>
 	<detail>
-		<band height="30" splitType="Stretch">
+		<band height="25" splitType="Stretch">
 			<textField>
-				<reportElement x="24" y="0" width="100" height="20" uuid="bf6ec7e6-318f-4342-974e-750425bf0e28"/>
+				<reportElement x="7" y="4" width="100" height="20" uuid="f0df6217-7549-481b-a72f-724465680625"/>
+				<textElement>
+					<font fontName="SansSerif"/>
+				</textElement>
 				<textFieldExpression><![CDATA[$F{nombreempleado}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="150" y="6" width="100" height="20" uuid="8f4e1333-f5d7-4e63-bcce-67e3e5e1315e"/>
+				<reportElement x="133" y="4" width="100" height="20" uuid="28592223-1eac-441a-87f7-4c26d7e010b3"/>
+				<textElement>
+					<font fontName="SansSerif"/>
+				</textElement>
 				<textFieldExpression><![CDATA[$F{nombrepuesto}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="269" y="7" width="100" height="20" uuid="272e4777-35e6-4548-a0e0-42b8ec54913b"/>
+				<reportElement x="263" y="4" width="100" height="20" uuid="95e53dcc-0bab-432d-923a-2bb8db742b27"/>
+				<textElement>
+					<font fontName="SansSerif"/>
+				</textElement>
 				<textFieldExpression><![CDATA[$F{numeroacuerdocomite}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="404" y="7" width="100" height="20" uuid="1f812342-3610-4918-89ff-8400f3027546"/>
-				<textFieldExpression><![CDATA[$F{nombrecomite}]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement x="533" y="10" width="100" height="20" uuid="c9460eb6-1a38-4fa4-8781-a6780d6a0550"/>
+				<reportElement x="543" y="4" width="100" height="20" uuid="779232a7-bda8-4e32-ad57-bc01d87c4833"/>
+				<textElement>
+					<font fontName="SansSerif"/>
+				</textElement>
 				<textFieldExpression><![CDATA[$F{fechadesdecomite}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="658" y="9" width="100" height="20" uuid="b7b3ab8b-b616-46ff-9a95-9d5e6f37e0c0"/>
+				<reportElement x="692" y="4" width="100" height="20" uuid="a345a786-0053-44fc-8fdc-b793c3dcc4f1"/>
+				<textElement>
+					<font fontName="SansSerif"/>
+				</textElement>
 				<textFieldExpression><![CDATA[$F{fechahastacomite}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="397" y="4" width="100" height="20" uuid="5c39e05e-6a51-468e-856f-bbcf005647b6"/>
+				<textElement>
+					<font fontName="SansSerif"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$F{nombrecomite}]]></textFieldExpression>
 			</textField>
 		</band>
 	</detail>
 	<columnFooter>
 		<band height="45" splitType="Stretch">
 			<line>
-				<reportElement x="6" y="4" width="786" height="1" uuid="93338fa3-83d8-40bf-b8ae-199064764896"/>
+				<reportElement x="5" y="5" width="763" height="1" uuid="93ec930f-20ed-4bf3-bdb8-4b4c946d7e95"/>
 			</line>
 			<staticText>
-				<reportElement x="16" y="13" width="100" height="20" uuid="71096c79-6793-41c8-869e-d877e08f49cb"/>
+				<reportElement x="16" y="13" width="100" height="20" uuid="84ba6751-389d-4fb3-aa6d-8c5913376559"/>
+				<textElement>
+					<font fontName="SansSerif"/>
+				</textElement>
 				<text><![CDATA[Total de Registros]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="695" y="19" width="100" height="20" uuid="73d82459-7c40-44ac-9c93-a30915f8a1a8"/>
-				<textFieldExpression><![CDATA[$V{PAGE_NUMBER}]]></textFieldExpression>
+				<reportElement x="131" y="13" width="100" height="20" uuid="c8f0b7bc-8fc1-4aaa-976b-37d3a33e51ac"/>
+				<textElement>
+					<font fontName="SansSerif"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$F{COUNT(c.codigocomite)}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="132" y="17" width="100" height="20" uuid="b8beb76e-5aea-4590-8a36-8d9b84297912"/>
-				<textFieldExpression><![CDATA[$F{COUNT(c.codigocomite)}]]></textFieldExpression>
+				<reportElement x="652" y="10" width="100" height="20" uuid="59caeda8-7173-45d2-8c20-86e5f6ed160f"/>
+				<textElement>
+					<font fontName="SansSerif"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$V{PAGE_NUMBER}]]></textFieldExpression>
 			</textField>
 		</band>
 	</columnFooter>
 	<pageFooter>
 		<band height="54" splitType="Stretch">
 			<staticText>
-				<reportElement x="287" y="17" width="229" height="20" uuid="80f194c1-3771-48f4-b565-2090e9dbcf89"/>
+				<reportElement x="324" y="16" width="183" height="20" uuid="6de3c10d-b33a-4540-8323-863022d0ddd8"/>
+				<textElement>
+					<font fontName="SansSerif"/>
+				</textElement>
 				<text><![CDATA[Derechos Reservados UES/FIA/EISI]]></text>
 			</staticText>
 		</band>
