--- a/src/main/resources/templates/fragments/otherreports/renunciasreport.html
+++ b/src/main/resources/templates/fragments/otherreports/renunciasreport.html
@@ -7,6 +7,7 @@
 <body>
      <div class="contenedorizq">
     <label  class="der">
+        
     <script >
 var f = new Date();
 document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
@@ -44,6 +45,9 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                      <div class="form-group">    
                          <td><a class="btn btn-default" id="generar">Generar</a></td>
                     </div>
+                    <div class="form-group">    
+                         <td><a class="btn btn-default" id="excel">excel</a></td>
+                    </div>
                 </form>
             </div>
         </div>
@@ -65,6 +69,10 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
             $("#formreport").attr('action', '../renuncias/'+ $("#codigo").val().toString());
             $("form#formreport").submit();
             
+        });
+        $('#excel').click(function(){
+            $("#formreport").attr('action', '../renunciasxls');
+            $("form#formreport").submit();
         });
     });
 </script>
