--- a/src/main/resources/templates/fragments/otherreports/comitesreport.html
+++ b/src/main/resources/templates/fragments/otherreports/comitesreport.html
@@ -45,6 +45,9 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                      <div class="form-group">    
                          <td><a class="btn btn-default" id="generar">Generar</a></td>
                     </div>
+                      <div class="form-group">    
+                         <td><a class="btn btn-default" id="excel">excel</a></td>
+                    </div>
                 </form>
             </div>
         </div>
@@ -64,6 +67,11 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
         });
         $('#generar').click(function(){
             $("#formreport").attr('action', '../comites/'+ $("#codigo").val().toString());
+            $("form#formreport").submit();
+            
+        });
+         $('#excel').click(function(){
+            $("#formreport").attr('action', '../comitesxls');
             $("form#formreport").submit();
             
         });
