--- a/src/main/resources/templates/fragments/usuario/usuarioform.html
+++ b/src/main/resources/templates/fragments/usuario/usuarioform.html
@@ -49,7 +49,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
             <div class="form-group">
                 <label class="col-sm-2 control-label">Confirmacion de Contraseña:</label>
                 <div class="col-sm-8">
-                    <input type="text" class="form-control numeros " required="true" size="11" maxlength="11" th:field="*{controlcontrasenia}" placeholder="Digite confirmacion de contrasena de Usuario"/>
+                    <input type="text" class="form-control " required="true" size="11" maxlength="11" th:field="*{controlcontrasenia}" placeholder="Digite confirmacion de contrasena de Usuario"/>
                 </div>
             </div>
 <!--            <div class="form-group">
