--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -41,7 +41,7 @@
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown">Gestionar Usuarios <span class="caret"></span><span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-user"></span></a>
 					
                                         <ul class="dropdown-menu forAnimate" role="menu">
-						 <li><a href="#" th:href="@{/usuarios/}">Generar Reportes</a></li>
+						 <li><a href="#" th:href="@{/usuarios/}">Consultar Usuarios</a></li>
                                                  <li><a href="#" th:href="@{/usuarios/new/usuario}">Crear Usuario</a></li>
                                                  <li><a href="#" th:href="@{/roles/}">Consultar Roles</a></li>
                                                 <li><a href="#" th:href="@{/roles/new/rol}">Crear Rol</a></li>
