agregando detalle de vistas

--- a/src/main/resources/templates/fragments/estado/estados.html
+++ b/src/main/resources/templates/fragments/estado/estados.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head lang="en">
-    <title>Estados</title>
+    <head lang="en">
+        <title>Roles</title>
     <th:block th:include="../templates/header"></th:block>
 </head>
 <body>
@@ -12,11 +12,19 @@ var f = new Date();
 document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
 </script></label>
 </div>
-<div class="container">
-   
-    <div th:if="${not #lists.isEmpty(estados)}">
-        <h3  align="center">Lista de Estados</h3>
-        <table class="table table-striped">
+    <div class="row">
+             <div class="col-md-3">
+                        <th:block th:include="../templates/menu"></th:block>
+                    </div>
+     <div class="col-md-9">
+          <div class="row text-center">
+                        <img src="../../static/image/images.jpeg" width="200" th:src="@{/image/images.jpeg}"/>
+                    </div>
+    <h3  align="center">Lista de Estados</h3>
+         <div th:if="${not #lists.isEmpty(estados)}">
+        
+        <table id="tablita" class="table table-striped">
+            <thead>
             <tr>
                 <th>Codigo</th>
                 <th>Nombre</th>
@@ -24,6 +32,8 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                  <th>Acciones</th>
                 
             </tr>
+                        </thead>
+
             <tr th:each="estado : ${estados}">
                 <td th:text="${estado.codigoestado}">Codigo</td>
                 <td th:text="${estado.nombreestado}">Nombre</td>
@@ -31,9 +41,9 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                 
                 
                 
-                <td><a th:href="${'./show/' + estado.codigoestado}" class="btn btn-default">Mostrar</a>
-                <a th:href="${'./edit/' + estado.codigoestado}" class="btn btn-default">Editar</a>
-                <td><a  class="btn btn-danger" th:onclick="'eliminar(\'' + ${estado.codigoestado} + '\');'" >Eliminar</a></td>
+                <td><a th:href="${'./show/' + estado.codigoestado}" class="btn btn-info">Mostrar</a>
+                <a th:href="${'./edit/' + estado.codigoestado}" class="btn btn-success">Editar</a>
+                <a  class="btn btn-danger" th:onclick="'eliminar(\'' + ${estado.codigoestado} + '\');'" >Eliminar</a>
                 <!--<a th:href="${'./delete/' + estado.codigoestado}" class="btn btn-danger">Delete</a>-->
                 </td>
             </tr>
@@ -42,6 +52,11 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
 </div>
      <script th:inline="javascript">
         $(document).ready(function () {
+             $('#tablita').DataTable({
+                "language": {
+                "url": "//cdn.datatables.net/plug-ins/1.10.16/i18n/Spanish.json"
+                }});
+            
     if([[${msg}]]===3){
        swal({
            
