--- a/src/main/resources/templates/fragments/rol/roles.html
+++ b/src/main/resources/templates/fragments/rol/roles.html
@@ -22,21 +22,24 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                     </div>
         <h3 align="center">Todos los Roles</h3>
         <div th:if="${not #lists.isEmpty(roles)}">
-            <table class="table table-striped">
+            <table id="tablita" class="table table-striped">
+                  <thead>  
                 <tr>
                     <th>Codigo</th>
                     <th>Nombre</th>
-                    <th>Desacripcion</th>
+                    <th>Descripcion</th>
+                    <th>opciones</th>
 
                 </tr>
+                  </thead> 
                 <tr th:each="rol : ${roles}">
                     <td th:text="${rol.codigorol}">Codigo</td>
                     <td th:text="${rol.nombrerol}">Nombre</td>
-                    <td th:text="${rol.descripcionrol}">contraseña</td>
-                    <td><a th:href="${'./show/' + rol.codigorol}" class="btn btn-default">Mostrar</a></td>
-                    <td><a th:href="${'./edit/' + rol.codigorol}" class="btn btn-default">Editar</a></td>
+                    <td th:text="${rol.descripcionrol}">descripcion</td>
+                    <td><a th:href="${'./show/' + rol.codigorol}" class="btn btn-info">Mostrar</a>
+                    <a th:href="${'./edit/' + rol.codigorol}" class="btn btn-success">Editar</a>
                     <!--<td><a th:href="${'./delete/' + rol.codigorol}" class="btn btn-danger">Delete</a></td>-->
-                    <td><a  class="btn btn-danger" th:onclick="'eliminar(\'' + ${rol.codigorol} + '\');'" >Borrar</a></td>
+                    <a  class="btn btn-danger" th:onclick="'eliminar(\'' + ${rol.codigorol} + '\');'" >Borrar</a></td>
                 </tr>
             </table>
         </div>
@@ -44,6 +47,12 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
     </div>
     <script th:inline="javascript">
         $(document).ready(function () {
+        $('#tablita').DataTable( {
+        "language": {
+            "url": "//cdn.datatables.net/plug-ins/1.10.16/i18n/Spanish.json"
+        }} );    
+            
+            
         if ([[${msg}]] === 3){
         swal({
 
