--- a/src/main/resources/templates/fragments/rol/rolform.html
+++ b/src/main/resources/templates/fragments/rol/rolform.html
@@ -53,7 +53,9 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
             </div>-->
 
             <div class="row">
-                <button type="submit" class="btn btn-default">Agregar</button>
+            <button type="button" class="btn btn-info"><a href="#" th:href="@{/roles/}">Regresar</a></button>
+            <button type="submit" class="btn btn-primary">Agregar</button>
+            <button type="reset" class="btn btn-default">Limpiar</button>
             </div>
         </form>
     </div>
