--- a/src/main/resources/templates/fragments/usuario/usuarioform.html
+++ b/src/main/resources/templates/fragments/usuario/usuarioform.html
@@ -78,8 +78,8 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
             </div>-->
 <div class="col-md-12">
 <div class="row" align="center">
-      
-            <button type="submit" class="btn btn-default">Agregar</button>
+            <button type="button" class="btn btn-info"><a href="#" th:href="@{/usuarios/}">Regresar</a></button>
+            <button type="submit" class="btn btn-primary">Agregar</button>
             <button type="reset" class="btn btn-default">Limpiar</button>
         
     </div>
