misiones y otras iondas

--- a/src/main/resources/templates/fragments/beneficio/beneficios.html
+++ b/src/main/resources/templates/fragments/beneficio/beneficios.html
@@ -18,7 +18,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                     </div>
      <div class="col-md-9">
           <div class="row text-center">
-                        <img src="../../static/image/images.jpeg" width="200" th:src="@{/image/images.jpeg}"/>
+                        <img src="../../static/image/images.jpeg" width="200" th:src="@{/image/beneficio.png}"/>
                     </div>
         <h3 align="center">Beneficios</h3>
     <div th:if="${not #lists.isEmpty(beneficios)}">
