--- a/src/main/resources/templates/fragments/mision/misionform.html
+++ b/src/main/resources/templates/fragments/mision/misionform.html
@@ -46,20 +46,26 @@
         </div>
         <div class="col-md-8">
     <h3 align="center">Crear Mision</h3>
-   
+        
         <form class="form-horizontal" th:object="${mision}" th:action="@{../mision}" method="post">
-            <input type="hidden" th:field="*{codigomisiojn}"/>
+            <input type="hidden" th:field="*{codigomision}"/>
             <input type="hidden" th:field="*{nombremision}"/>
            <div class="col-md-6">
-
+           
             <div class="form-group">
                 <label class="col-sm-5 control-label">Nombre de Mision(*):</label>
                 <div class="col-sm-7">
                     <input type="text" class="form-control" th:field="*{nombremision}"/>
                 </div>
             </div>
+                <div class="form-group">
+                <label class="col-sm-5 control-label">Objetivo de Mision(*):</label>
+                <div class="col-sm-7">
+                    <input type="number" step="0.01" class="form-control" th:field="*{objetivomision}"/>
+                </div>
+            </div>
             <div class="form-group">
-                <label class="col-sm-2 control-label">Nombre de Empleado(*):</label>
+                <label class="col-sm-5 control-label">Nombre de Empleado(*):</label>
                 <div class="col-sm-7">
                     <select class="form-control" name="codigoempleado" >
                         <option>Empleado 1</option>
@@ -69,12 +75,7 @@
                     </select>
                 </div>
             </div>
-            <div class="form-group">
-                <label class="col-sm-5 control-label">Objetivo de Mision(*):</label>
-                <div class="col-sm-7">
-                    <input type="number" step="0.01" class="form-control" th:field="*{objetivomision}"/>
-                </div>
-            </div>
+           
             <div class="form-group">
                 <label class="col-sm-5 control-label">Responsable del Gasto(*):</label>
                 <div class="col-sm-7">
@@ -157,20 +158,22 @@
                      <input class="form-control" type="text" th:field="*{fecharegresomision}" name="fecharegresomision" id="fecharegresomision" />
                 </div>
             </div>
-           <div class="form-group">
+              
+                  
+                  
+          <div class="form-group">
                 <label class="col-sm-5 control-label">Fecha de Acuerdo(*):</label>
                 <div class="col-sm-7">
-                    <!--<input type="text" class="form-control" th:field="*{ubicacionpuesto}"/>-->
                      <input class="form-control" type="text" th:field="*{fechaacuerdo}" name="fechaacuerdo" id="fechaacuerdo" />
                 </div>
             </div>
-                   <div class="form-group">
+           <div class="form-group">
                 <label class="col-sm-5 control-label">Acuerdo(*):</label>
                 <div class="col-sm-7">
-                    <input type="text" class="form-control" th:field="*{acuerdo}"/>
+                     <input type="text" class="form-control" th:field="*{acuerdo}"/>
                 </div>
             </div>
-            <div class="form-group">
+<!--            <div class="form-group">
                 <label class="col-sm-5 control-label">Boleto Aeroe(*):</label>
                 <div class="col-sm-7">
                     <input type="text" class="form-control" th:field="*{boteoaereo}"/>
@@ -202,18 +205,18 @@
                 <div class="col-sm-7">
                     <input type="text" class="form-control" th:field="*{organismoinvita}"/>
                 </div>
-            </div>
+            </div>-->
             
-                   </div>
+        </div>
 
- <div class="col-md-12">
-            <div class="row" align="center">
-                <button type="button" class="btn btn-default"><a href="#" th:href="@{/misiones/}">Regresar</a></button>
-                <button type="submit" class="btn btn-default">Guardar</button>
-                <button type="reset" class="btn btn-default">Limpiar</button>
-            </div>
-    </div>
-                    </form>
+                <div class="col-md-12">
+                           <div class="row" align="center">
+                               <button type="button" class="btn btn-default"><a href="#" th:href="@{/misiones/}">Regresar</a></button>
+                               <button type="submit" class="btn btn-default">Guardar</button>
+                               <button type="reset" class="btn btn-default">Limpiar</button>
+                           </div>
+                   </div>
+        </form>
 
             </div>
             </div>
@@ -222,7 +225,7 @@
             <th:block th:include="../templates/footer"></th:block>
         </div>
 
-  </div>      
+      
        
 </body>
 <script src="../static/css/hydro/js/jquery.js"></script>
